Add compat entry for julia

--- a/Project.toml
+++ b/Project.toml
@@ -14,3 +14,4 @@ Unicode = "4ec0a83e-493e-50e2-b9ac-8f72acf5a8f5"
 DocStringExtensions = "0.8"
 Documenter = "0.26"
 Orthography = "0.7"
+julia = "1.5"
