--- a/Project.toml
+++ b/Project.toml
@@ -14,5 +14,6 @@ Unicode = "4ec0a83e-493e-50e2-b9ac-8f72acf5a8f5"
 [compat]
 DocStringExtensions = "0.8"
 Documenter = "0.26"
+Orthography = "0.7"
 PolytonicGreek = "0.9"
 julia = "1.5"
