--- a/Project.toml
+++ b/Project.toml
@@ -15,5 +15,5 @@ Unicode = "4ec0a83e-493e-50e2-b9ac-8f72acf5a8f5"
 DocStringExtensions = "0.8"
 Documenter = "0.26"
 Orthography = "0.8"
-PolytonicGreek = "0.10, 0.11"
+PolytonicGreek = "0.10, 0.11, 0.12"
 julia = "1.5"
