--- a/Project.toml
+++ b/Project.toml
@@ -13,7 +13,7 @@ Unicode = "4ec0a83e-493e-50e2-b9ac-8f72acf5a8f5"
 
 [compat]
 DocStringExtensions = "0.8"
-Documenter = "0.26"
+Documenter = "0.26, 0.27"
 Orthography = "0.8, 0.9, 0.10, 0.11"
 PolytonicGreek = "0.12"
-julia = "1.5"
+julia = "1"
