--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "AtticGreek"
 uuid = "330c8319-f7ed-461a-8c52-cee5da4c0892"
 authors = ["nsmith "]
-version = "0.6.3"
+version = "0.6.4"
 
 [deps]
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
@@ -13,7 +13,7 @@ Unicode = "4ec0a83e-493e-50e2-b9ac-8f72acf5a8f5"
 
 [compat]
 DocStringExtensions = "0.8"
-Documenter = "0.26, 0.27"
-Orthography = "0.8, 0.9, 0.10, 0.11"
+Documenter = "0.27"
+Orthography = "0.12"
 PolytonicGreek = "0.12"
 julia = "1"
